tests/NormalTests/paczka1/fuzzy1/73105663.err
Error in line 3: cb9XU S256 47,6
Error in line 15: DbScqm S256 81,8
Error in line 12: geUACqPTyoo S604 82,5
Error in line 30: Rc59ce2 S258 27,34
Error in line 38: geUACqPTyoo S258 91,9
